fix: Update script paths for deployment
Sets the base URL for the application to "./" and updates the script tag in index.html to use a relative path for "index.tsx". This ensures that the application correctly loads its JavaScript modules when deployed to a server.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="./" />
     <title>Sa'ati - Work Hours Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -182,6 +183,6 @@
         console.error("Firebase initialization error. Please check your firebaseConfig.", e);
       }
     </script>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
