--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="root"></div>
@@ -183,6 +184,10 @@
         console.error("Firebase initialization error. Please check your firebaseConfig.", e);
       }
     </script>
-    <script type="module" src="./index.tsx"></script>
+    <!-- Add Babel for JSX transpilation -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <!-- Change script type to text/babel for transpilation -->
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
